# matcurses

./: Cargo.toml  README.md  session.vim
crates/widgets/: Cargo.toml
crates/widgets/src/: button.rs  checkbox.rs  form.rs  lib.rs  link.rs  list.rs  modal_frame.rs  radio.rs  status_bar.rs  text_input.rs  tree.rs  wrapped_list.rs
src/: app.rs  audio.rs  event.rs  main.rs  matrix.rs  message.rs  modal.rs  secrets.rs  sounds.rs  ui.rs
src/view/: login.rs  members.rs  mod.rs  room_list.rs  settings.rs  space_tree.rs
