[workspace]
members = ["crates/widgets"]

[package]
name = "matcurses"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
widgets = { path = "crates/widgets" }
matrix-sdk = { version = "0.7", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls", "sso-login"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
dirs = "5"
url = "2"
futures-util = "0.3"
serde_json = "1"
rodio = { version = "0.19", default-features = false, features = ["symphonia-all", "vorbis", "mp3", "wav", "flac"] }
opus = "0.3"
ogg = "0.9"
open = "5"
arboard = "3"
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
shell-words = "1"
